# learn-claude-code-my

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_REFACTOR_PLAN.md  ARCHITECTURE_REPORT.md  CHANGELOG.md  CLAUDE.md  Dockerfile.dev  MONITORING_TEST_GUIDE.md  Makefile  PROJECT_CLEANUP_REPORT.md  README-ja.md  README-zh.md  README.md  REALTIME_MESSAGE_SYSTEM.md  app.py  auth_performance_report.json  cleanup-project.ps1  config.yaml  docker-compose.yml  generate_it_costs_query.sql  generate_it_services_query.sql  hitl_self_test.ps1  it_cost_allocation_query.py  it_cost_query.py  main.py  main_9998.py  memory.md  pyproject.toml  requirements.txt  rewrite_simple.py  start_server.py  test_background_task.py  test_base_agent_loop.py  test_memory_db.py  test_plugins.py  test_s02_with_skill_loader.py  test_skill_edit_hitl.py  (+3 more)
.agent_memory/: tool_history.jsonl
.claude/: mcp.json  settings.local.json
.gitnexus/: kuzu
.logs/: 29a2d7e0-2717-4ff0-bfe3-45ce9ea6f19b_messages.jsonl  29a2d7e0-2717-4ff0-bfe3-45ce9ea6f19b_run_report.json  9de97264-47b3-4ad2-8987-cb7120ce8c37_messages.jsonl  9de97264-47b3-4ad2-8987-cb7120ce8c37_run_report.json  a5d5dfb0-298d-4934-bba9-1fe4511fd722_messages.jsonl  api_messages.jsonl
.mcp/: mcp.json
.omc/: config.json
.workspace/: analyze_data.py  analyze_purchase_changes.py  analyze_purchase_changes_detailed.py  check_cost_db.py  check_env.py  correct_hr_budget_query.py  db_config_check.py  debug_query_execution.py  deep_analysis.py  direct_query_execution.py  execute_query.py  explore_database.py  explore_dir.py  explore_files.py  final_analysis.py  finance_query.py  finance_query_tool.py  find_budget.py  fy25_actual_ct_it_query.py  generate_query.py  generated_query.sql  hr_budget_analysis.md  hr_budget_report.py  hr_budget_sql_statements.sql  list_files.py  list_skills.py  list_tables.py  query_25_actual_ct_it.sql  query_25_fy_actual_ct_it.sql  query_25_fy_actual_ct_it_cost.sql  query_25_fy_ct_it.sql  query_alloc_ct_it.sql  query_ct_it_costs.py  query_ct_it_costs.sql  query_detailed.py  query_detailed_hr_budget.py  query_executor.py  query_fy25_ct_it.sql  query_fy25_ct_it_cost.sql  query_fy26_hr_budget.py  (+20 more)
agents/: __init__.py  client.py  logging_config.py  s01_agent_loop.py  s02_tool_use.py  s03_todo_write.py  s04_subagent.py  s05_skill_loading.py  s06_context_compact.py  s07_task_system.py  s08_background_tasks.py  s09_agent_teams.py  s10_team_protocols.py  s11_autonomous_agents.py  s12_worktree_task_isolation.py  s_full.py  s_full_refactored.py  sql_agent_interactive.py  sql_agent_loop.py  sql_agent_loop_v2.py  start_server.py
backend/: ARCHITECTURE.md  __init__.py
core/: container.py  engine.py
docs/: 01-architecture.md  02-ui-components.md  03-tools-commands.md  04-services.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_COMPLETE.md  CORE_ARCHITECTURE.md  FRONTEND_REFACTOR_PLAN.md  MIGRATION.md  MIGRATION_GUIDE.md  MIGRATION_PLAN.md  MIGRATION_QUICKSTART.md  MONITORING_TEST_GUIDE.md  MONITORING_TEST_SUITE.md  PROJECT_STRUCTURE.md  PYDANTIC_MIGRATION.md  README.md  REFACTOR_ARCHITECTURE.html  REFACTOR_ARCHITECTURE.md  SDK_ADAPTER_DESIGN.html  SDK_ADAPTER_DESIGN.md  backend-layered-architecture.md  backend-state-management-design.md  context-compact-comparison.md  design-deep-agent-integration.md  fix-streaming-complete-event.md  free-code-analysis-report.md  free-code-memory-system-analysis.md  frontend-pure-rendering-design.md  memory-file-format.md  memory-system-architecture.md  memory-system-comparison.md  memory-system-embedding-design.md  memory-workflows.md  plan-deep-agent-integration.md  refactor-summary.md  session-self-correction-design.md  skill-edit-human-in-the-loop-design.md  todo-manager-hook-integration-design.md  (+1 more)
examples/: README.md  async_queue_usage.py  llm_adapter_usage.py  memory_middleware_usage.py
infra/: README.md
interfaces/: agent_runtime_bridge.py
logs/: session_debug.jsonl  session_memory.json
runtime/: logging_config.py
scripts/: check_bare_dicts.py  (+4 more)
(+1600 files in other folders)
