[project]
name = "learn-claude-code"
version = "0.1.0"
description = "A nano Claude Code-like agent learning project"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "python-dotenv",
    "httpx",
    "loguru",
    "langchain-core",
    "langchain-anthropic",
    "litellm",
    "langchain-openai",
    "langgraph",
]

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["tmp*", "web*", "logs*", "study*", "skills*", "history*", "openspec*", "workspace*", ".venv*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
