[project]
name = "learn-claude-code"
version = "0.1.0"
description = "A nano Claude Code-like agent learning project"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "python-dotenv",
    "httpx",
    "loguru",
    "langchain-core",
    "langchain-anthropic",
    "litellm",
    "langchain-openai",
    "langgraph",
]

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["tmp*", "web*", "logs*", "study*", "skills*", "history*", "openspec*", "workspace*", ".venv*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# ═════════════════════════════════════════════════════════════════
# Ruff - Python Linter & Formatter (替代 flake8, black, isort)
# ═════════════════════════════════════════════════════════════════
[tool.ruff]
target-version = "py311"  # Python 3.11+
line-length = 100
exclude = [
    ".venv*",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
    "logs",
    "tmp",
    "web",
    "workspace",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "COM",    # flake8-commas
    "C90",    # mccabe complexity
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "ANN",    # flake8-annotations (类型注解检查)
    "TCH",    # flake8-type-checking
    "FA",     # flake8-future-annotations
]
ignore = [
    "E501",   # line too long (由 formatter 处理)
    "COM812", # trailing comma (与 formatter 冲突)
    "ANN401", # 允许使用 Any 类型（逐步迁移）
]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true  # None 返回值不强制注解
allow-star-arg-any = true       # *args/**kwargs 允许 Any

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ═════════════════════════════════════════════════════════════════
# MyPy - 静态类型检查（包含裸字典检测）
# ═════════════════════════════════════════════════════════════════
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false      # 允许未类型化的函数定义
disallow_incomplete_defs = false   # 允许不完整的类型定义
check_untyped_defs = true          # 检查未类型化代码中的类型错误
ignore_missing_imports = true      # 忽略缺失的导入类型
show_error_codes = true
show_column_numbers = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# 裸字典/列表检测 - 要求完整的类型参数
disallow_any_generics = true       # 禁止裸泛型（如 dict, list 必须写成 dict[str, int]）
warn_incomplete_stub = true

exclude = [
    ".venv",
    "logs",
    "tmp",
    "web",
    "workspace",
    "tests",
]
